# chel-fs-rust

./: Cargo.toml  README.md  build.rs
proto/: metadata_ops.proto
src/: chel_fs_client.rs  chel_fs_server.rs  file_utils.rs  metadata_ops.rs  metadata_store.rs
